--- a/Rapport 6/fys2150r6_polarization_nichoka.tex
+++ b/Rapport 6/fys2150r6_polarization_nichoka.tex
@@ -86,7 +86,7 @@
     \begin{figure}[H]
       \center
       \includegraphics[width=8cm]{scripts/figs/calcite.jpg}
-      \caption{Crystaline structure of calcite (Source: \url{http://lecturedemo.ph.unimelb.edu.au/Optics/Crystal-optics/Oh-1-Calcite-Crystal-Model/Calcite-Diagram})}
+      \caption{Crystaline structure of calcite (\textbf{Source:} \url{http://lecturedemo.ph.unimelb.edu.au/Optics/Crystal-optics/Oh-1-Calcite-Crystal-Model/Calcite-Diagram})}
       \label{fig:calcite}
     \end{figure}
 
@@ -105,7 +105,7 @@
   \begin{figure}[H]
     \center
     \includegraphics[width=8cm]{scripts/figs/diagram_1.png}
-    \caption{Aparature to test the polarization of light emitted from a spectral lamp using a polarization filter with variable angle $\theta$ as an analyzer and measuring the intensity of the filtered light using the luxmeter.}
+    \caption{Aparature to test the polarization of light emitted from a spectral lamp using a polarization filter with variable angle $\theta$ as an analyzer and measuring the intensity of the filtered light using the luxmeter. \textbf{Note:} Analyzer and Polarizer are misspelled in this and subsequent figures due to a poor translation of the terminology}
     \label{fig:lux_ana_lamp}
   \end{figure}
 
@@ -134,7 +134,7 @@
 
       As for making the measurements, the polarisator was set either parallel or tangential to the reflective plane of the prism and the prism was adjusted such that the reflective plane was paralell to the laser beam. Captstone was then started and the luxmeter and prism were slowly rotated untill the angle between the laser and the luxmeter was roughly $65^\circ$. This was repeated for both S and P-polarized light.
 
-      Afterwards, we investigated the direction of transmission of a pair of polaroid glasses using an analyzator. The analyzator was rotated and the change in intensity of light was observed through the polaroid glasses.
+      Afterwards, we investigated the direction of transmission of a pair of polaroid glasses using an analyzer. The analyzer was rotated and the change in intensity of light was observed through the polaroid glasses.
 
     \begin{figure}[H]
       \center
@@ -149,7 +149,7 @@
 
     The distance between the single slit and convex lens was adjusted untill the line projected onto the screen was in focus.
 
-    Afterwards, the polarization of the light after having passed through the glass plate was then observed by adjusting the analyzator for different angles of the glass plate. In particular, we adjusted the glass plate to the brewster angle which was found for the prism in section \ref{subsect:reflection_experimental}.
+    Afterwards, the polarization of the light after having passed through the glass plate was then observed by adjusting the analyzer for different angles of the glass plate. In particular, we adjusted the glass plate to the brewster angle which was found for the prism in section \ref{subsect:reflection_experimental}.
 
     \begin{figure}[H]
       \center
@@ -161,7 +161,7 @@
   \subsection{Observing birefringence in crystalline Calcite}
     We had two samples of crystalline calcite. One of which was naturally occurring sample, and another which was cut tangentially to its optical axis on two opposing sides. Both of the crystals were transparent\footnote{I believe the particular type of calcite used is named Iceland spar, or at the very least, it looks quite similar to it. See \url{https://en.wikipedia.org/wiki/Iceland_spar}}, and text was clearly readable when looking through them. The crystals were placed on an illuminated panel, on top of which was some text printed on transparent plastic. We then observed the text by looking through the two calcite crystals, both with and without a polarization filter acting as an Analyzer. 
 
-    Afterwards, we used an aparature as the one depicted in Fig. \ref{fig:calcite} to investigate how the crystals affected a thin beam of light which is passed through it. The crystals were held inbetween the analysator and lens, and we investigated how the intensity of the dots projected on the screen varied as we changed the angle of the analyzator.
+    Afterwards, we used an aparature as the one depicted in Fig. \ref{fig:calcite} to investigate how the crystals affected a thin beam of light which is passed through it. The crystals were held inbetween the analysator and lens, and we investigated how the intensity of the dots projected on the screen varied as we changed the angle of the analyzer.
 
     \begin{figure}[H]
       \center
@@ -171,7 +171,7 @@
     \end{figure}
 
   \subsection{Circular polarization of light using Calcite waveplates}
-    In order to investigate the effect of the polarization of light emitted by the spectral lamp when passed through $\lambda /2$ waveplates, where $\lambda=550$, the most abundent wavelength of visible light emitted from the sodium spectral lamp, an aparature as depicted in Fig. \ref{fig:waveplate} was prepared. The aparature allowed for the rotation of the waveplates along the axis paralell to the light being passed through it from the spectral lamp. There was however no markings on the waveplate to indicate its current orientation, which had to be determined by a methodic approach by the use of the analyzator.
+    In order to investigate the effect of the polarization of light emitted by the spectral lamp when passed through $\lambda /2$ waveplates, where $\lambda=550$, the most abundent wavelength of visible light emitted from the sodium spectral lamp, an aparature as depicted in Fig. \ref{fig:waveplate} was prepared. The aparature allowed for the rotation of the waveplates along the axis paralell to the light being passed through it from the spectral lamp. There was however no markings on the waveplate to indicate its current orientation, which had to be determined by a methodic approach by the use of the analyzer.
 
     \begin{figure}[H]
       \center
@@ -180,9 +180,9 @@
       \label{fig:waveplate}
     \end{figure}
 
-    The polarizer was set to $0^\circ$ and the analyzator to $+90^\circ$. The waveplate is then rotated untill the projected image was at a minima. As we did not have a luxmeter, this was purely based on the observed intensity of the projection on the screen. When the intensity minima is reached with this configuration, the optical axis is at either $0^\circ$ or $90^\circ$ to the vertical axis. We then adjusted the polarizer to $+45^\circ$ and observed how the intensity of the projected light varied when adjusting the analyzator to different angles.
+    The polarizer was set to $0^\circ$ and the analyzer to $+90^\circ$. The waveplate is then rotated untill the projected image was at a minima. As we did not have a luxmeter, this was purely based on the observed intensity of the projection on the screen. When the intensity minima is reached with this configuration, the optical axis is at either $0^\circ$ or $90^\circ$ to the vertical axis. We then adjusted the polarizer to $+45^\circ$ and observed how the intensity of the projected light varied when adjusting the analyzer to different angles.
 
-    Afterwards, we added a second $\lambda/4$ waveplate to the aparature, which in combination effectively yields a $\lambda/2$ waveplate. The polarizer was then set to $+45^\circ$ and the analyzator to $-45^\circ$. We then turned the newly added waveplate, while leaving the old one in its previous orientation. The new waveplate was turned untill the projected light reached an intensity maxima. Again, the when this maxima occured was based on our judgement, as no quantitative measurement regarding its intensity was made. When the maxima was reached, the analyzator was turned to $+45^\circ$ and the intensity of the projected light was at a minimum.
+    Afterwards, we added a second $\lambda/4$ waveplate to the aparature, which in combination effectively yields a $\lambda/2$ waveplate. The polarizer was then set to $+45^\circ$ and the analyzer to $-45^\circ$. We then turned the newly added waveplate, while leaving the old one in its previous orientation. The new waveplate was turned untill the projected light reached an intensity maxima. Again, the when this maxima occured was based on our judgement, as no quantitative measurement regarding its intensity was made. When the maxima was reached, the analyzer was turned to $+45^\circ$ and the intensity of the projected light was at a minimum.
     
 
 
@@ -190,7 +190,7 @@
   
   \subsection{Polarization of light emitted by the spectral lamp}
 
-  The polarization of light emitted by the Sodium spectral lamb was investigated using an analyzator, and measured intensities using the luxmeter is presented in Table \ref{tab:ana}. A graph of this data is also provided in Fig. \ref{fig:ana_plot} for added clarity.
+  The polarization of light emitted by the Sodium spectral lamb was investigated using an analyzer, and measured intensities using the luxmeter is presented in Table \ref{tab:ana}. A graph of this data is also provided in Fig. \ref{fig:ana_plot} for added clarity.
 
   \begin{table}[H]
       \center
@@ -211,22 +211,22 @@
 
   \subsection{Confirming Malus law}
 
-  The measured intensities measured of $0^\circ$ polarized light for different angles $\theta$ of an analyzator, as depicted in Fig. \ref{fig:lux_ana_pola_lamp} is presented in Table \ref{fig:malus1} such that it should satisfy the proportionality $I \propto \cos^2(\theta)$ in accordance with Malus law. In addition to the measured data points, there is also a linear fit with its errors $\delta m, \delta c$.
+  The measured intensities measured of $0^\circ$ polarized light for different angles $\theta$ of an analyzer, as depicted in Fig. \ref{fig:lux_ana_pola_lamp} is presented in Table \ref{fig:malus1} such that it should satisfy the proportionality $I \propto \cos^2(\theta)$ in accordance with Malus law. In addition to the measured data points, there is also a linear fit with its errors $\delta m, \delta c$.
 
 
   \begin{figure}[H]
     \center
     \includegraphics[width=8cm]{scripts/malus1.png}
-    \caption{$E(\theta)$ denotes the intensity of light measured by the luxmeter as a function of the angle of the analyzator. $\delta m$ and $\delta c$ denote the error of the constants $m$, $c$ in the linear fit of the form $y=mx+c$.}
+    \caption{$E(\theta)$ denotes the intensity of light measured by the luxmeter as a function of the angle of the analyzer. $\delta m$ and $\delta c$ denote the error of the constants $m$, $c$ in the linear fit of the form $y=mx+c$.}
     \label{fig:malus1}
   \end{figure}
 
-  Following, in Fig. \ref{fig:malus2} are the intensity measurements presented as a function of the angle of the analyzator in the aparature depicted in \ref{fig:lux_pola_ana_pola_lamp} where light is first polarized at $0^\circ$, passed through an analyzator of variable angle $\theta$, polarized again at $+90^\circ$ before its intensity is measured by the luxmeter.
+  Following, in Fig. \ref{fig:malus2} are the intensity measurements presented as a function of the angle of the analyzer in the aparature depicted in \ref{fig:lux_pola_ana_pola_lamp} where light is first polarized at $0^\circ$, passed through an analyzer of variable angle $\theta$, polarized again at $+90^\circ$ before its intensity is measured by the luxmeter.
   
   \begin{figure}[H]
     \center
     \includegraphics[width=8cm]{scripts/malus2.png}
-    \caption{Intensity of light measured by luxmeter for different angles $\theta$ of analyzator which is positioned between two tangential polarizers at angles $-90^\circ$, $0$ respectively. See Fig. \ref{fig:lux_pola_ana_pola_lamp}}
+    \caption{Intensity of light measured by luxmeter for different angles $\theta$ of analyzer which is positioned between two tangential polarizers at angles $-90^\circ$, $0$ respectively. See Fig. \ref{fig:lux_pola_ana_pola_lamp}}
     \label{fig:malus2}
   \end{figure}
 
@@ -250,19 +250,21 @@
   \end{figure}
 
   \subsection{Polarization of light transmitted through glass plate}
-    Using an apparatus as depicted in Fig. \ref{fig:glassplate}, we observed the polarization of light transmitted through the glass plate at different angles of incidence. When the glass plate was vertical such that the angle of incidence was $0^\circ$, there was no change in the intensity of the projected light when changing the angle of the analyzator. 
+    Using an apparatus as depicted in Fig. \ref{fig:glassplate}, we observed the polarization of light transmitted through the glass plate at different angles of incidence. When the glass plate was vertical such that the angle of incidence was $0^\circ$, there was no change in the intensity of the projected light when changing the angle of the analyzer. 
 
-    The angle of incidence was then adjusted to the equivalent of the Brewster angle for the glass prism (see sect. \ref{sect:res_prism}), roughly $34^\circ$. For this angle, we observed an intensity maxima when the analyzator was at $0^\circ$ and a decreasing intensity as we slowly adjusted the analyzator in the positive and negative directions, reaching an intensity minima at both $\pm 90^\circ$. 
+    The angle of incidence was then adjusted to the equivalent of the Brewster angle for the glass prism (see sect. \ref{sect:res_prism}), roughly $34^\circ$. For this angle, we observed an intensity maxima when the analyzer was at $0^\circ$ and a decreasing intensity as we slowly adjusted the analyzer in the positive and negative directions, reaching an intensity minima at both $\pm 90^\circ$. 
 
   \subsection{Observations when looking at light passed through crystalline Calcite}
     When observing text through the naturally occurring sample of crystalline calcite, the birefringence of calcite was observed by the text splitting into two, seemingly identical copies of each other. When placing a the small polarization filter on top of the crystal and turning it, there were specific angles in which the text disappeared, one for each image. Without making any measurements, these angles seemed to be roughly $90^\circ$ relative to each other. Meaning the two images of the text are tangentially polarized relative to each other. 
 
-    When placing the sample in the apparatus depicted in Fig. \ref{fig:calcite}, there were two small circles of light projected onto the screen when the analyzator was set to $0^\circ$ and $90^\circ$.  Setting the analyzator to $+45^\circ$ resulted in one of the circle disappearing, and setting it to $-45^\circ$ made the other circle disappear.
+    When placing the sample in the apparatus depicted in Fig. \ref{fig:calcite}, there were two small circles of light projected onto the screen when the analyzer was set to $0^\circ$ and $90^\circ$.  Setting the analyzer to $+45^\circ$ resulted in one of the circle disappearing, and setting it to $-45^\circ$ made the other circle disappear.
 
-    When looking at the fabricated calcite sample, which was cut tangential to its optical axis. Only one image of the text was visible, and rotating a polarizing filter on top of it had no visible effect on the image. When investigating further, again using the apparatus depicted in Fig. \ref{fig:calcite}, there was only one circle projected onto the screen and rotating the analyzator had no visible effect on its luminosity. 
+    When looking at the fabricated calcite sample, which was cut tangential to its optical axis. Only one image of the text was visible, and rotating a polarizing filter on top of it had no visible effect on the image. When investigating further, again using the apparatus depicted in Fig. \ref{fig:calcite}, there was only one circle projected onto the screen and rotating the analyzer had no visible effect on its luminosity. 
 
   \subsection{Observations on the intensity of light polarized with calcite waveplates}
-    When the $\lambda/4$ plate was placed in between a polarizer and an analyzator as depicted in Fig. \ref{fig:waveplate}
+    When the $\lambda/4$ waveplate was oriented such that its optical axis was at either $0^\circ$ or $90^\circ$ to the vertical axis in the apparatus depicted in Fig. \ref{fig:waveplate}, the polarizer was then set to $+45^\circ$. Then, any adjustments made to the analyzer had no visible impact on the luminosity of the light projected onto the screen.
+
+    Following, a second $\lambda/4$ waveplate was added next to the previous, effectively yielding a $\lambda/2$ waveplate. The polarizer was then set to $+45^\circ$ and the analyzer to $-45^\circ$. The newly added waveplate was then rotated until there luminosity of the projected light reached a maxima. The analyzer was subsequently set to $+45^\circ$, which resulted the luminosity of the projected light reaching a minima.
 
 \section{\label{sect:discuss}Discussion}
 
