--- a/Rapport 6/fys2150r6_polarization_nichoka.tex
+++ b/Rapport 6/fys2150r6_polarization_nichoka.tex
@@ -264,7 +264,7 @@
   \subsection{Observations on the intensity of light polarized with calcite waveplates}
     When the $\lambda/4$ waveplate was oriented such that its optical axis was at either $0^\circ$ or $90^\circ$ to the vertical axis in the apparatus depicted in Fig. \ref{fig:waveplate}, the polarizer was then set to $+45^\circ$. Then, any adjustments made to the analyzer had no visible impact on the luminosity of the light projected onto the screen.
 
-    Following, a second $\lambda/4$ waveplate was added next to the previous, effectively yielding a $\lambda/2$ waveplate. The polarizer was then set to $+45^\circ$ and the analyzer to $-45^\circ$. The newly added waveplate was then rotated until there luminosity of the projected light reached a maxima. The analyzer was subsequently set to $+45^\circ$, which resulted the luminosity of the projected light reaching a minima.
+    Following, a second $\lambda/4$ waveplate was added next to the previous, effectively yielding a $\lambda/2$ waveplate. The polarizer was then set to $+45^\circ$ and the analyzer to $-45^\circ$. The newly added waveplate was then rotated until there luminosity of the projected light reached a maxima. The analyzer was subsequently set to $+45^\circ$, which resulted the luminosity of the projected light reaching a minima. implying that the direction of the $\vec E$ field had been rotated by $90^\circ$ after having traversed the waveplates.
 
 \section{\label{sect:discuss}Discussion}
 
